--- a/code/modeling/modeling_neural_networks.ipynb
+++ b/code/modeling/modeling_neural_networks.ipynb
@@ -441,7 +441,7 @@
     "\n",
     "def create_ann_model(x, n_neurons: list):\n",
     "  \"\"\"\n",
-    "  cria a rede neural com base em parâmetros informados\n",
+    "  Cria a rede neural com base em parâmetros informados.\n",
     "  \"\"\"\n",
     "\n",
     "  # Definir o modelo\n",
@@ -522,17 +522,6 @@
     "    f1 = 2 * (tf.reduce_sum(y_train * y_val) + tf.keras.backend.epsilon()) / (tf.reduce_sum(y_train) +\n",
     "     tf.reduce_sum(y_val) + tf.keras.backend.epsilon())\n",
     "    return f1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 486,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compilar o modelo com F1-score como métrica\n",
-    "\n",
-    "# model_1.compile(loss='binary_crossentropy', optimizer=keras.optimizers.SGD(learning_rate=0.001), metrics=f1_metric)"
    ]
   },
   {
