--- a/docs/discussions.ipynb
+++ b/docs/discussions.ipynb
@@ -43,7 +43,7 @@
     "- camada oculta: não será implementada, apesar da função generalizar para camadas ocultas, caso queira adicionar posteriormente;\n",
     "- camada de saída: ```sigmóide```.\n",
     "\n",
-    "A escolha pela _relu_ na camada de entrada é porque como os neurônios somente são ativados com inputs positivos, então isso impede que todos os neurônios sejam ativados ao mesmo tempo. Um outro ponto importante é que ela tornar o treinamento computacionalmente mais eficiente, permitindo um treinamento mais focado, isto é, com neurônios mais especializados.\n",
+    "A escolha pela _relu_ na camada de entrada é porque como os neurônios somente são ativados com inputs positivos, então isso impede que todos os neurônios sejam ativados ao mesmo tempo. Um outro ponto importante é que ela torna o treinamento computacionalmente mais eficiente, permitindo um treinamento mais focado, isto é, com neurônios mais especializados.\n",
     "\n",
     "Na camada de saída a escolha pela _sigmóide_ se deve ao fato dela transformar a saída da última camada em um valor no intervalo entre 0 e 1, representando uma probabilidade. Como este é um problema de classificação binária, esse valor pode ser interpretado como a probabilidade de pertencer à classe positiva, como dito anteriormente. Além disso a sigmóide é uma função de classe $C^\\infty$, ou seja, todas as suas derivadas são contínuas, o que facilita o cálculo dos gradientes durante o treinamento quando se usa, por exemplo, o _backpropagation_. Ela também ajuda a evitar o problema de \"explodir\" gradientes, que pode ocorrer durante o treinamento de redes neurais mais profundas, pois limita a saída entre 0 e 1, evitando esses valores extremamente grandes."
    ]
