--- a/docs/discussions.ipynb
+++ b/docs/discussions.ipynb
@@ -73,7 +73,7 @@
     "- 1 para vinhos bons; \n",
     "- 0 para vinhos ruins. \n",
     "  \n",
-    "Então, deve ser dada uma ênfase maior para os erros por falso positivo (vinho ruim classificado como bom) e falso negativo (vinho bom classificado como ruim), respectivamente essas métricas são a _recall_ e a _precision_. Sendo assim, seria mais interessante usar a média harmônica entre elas que é definida pela _f1-score_, ou seja, um valor alto de _f1-score_ só ocorrerá se a _recall_ e _precision_ forem altas. Além disso, a _f1-score_ também é uma boa métrica para trabalhar com classes desbalanceadas, que é o caso deste problema, onde temos aproximadamente 66,51% de vinhos classificados como bons e 33,49% classificados como ruins.\n",
+    "Então, deve ser dada uma ênfase maior para os erros por falso positivo (vinho ruim classificado como bom) e falso negativo (vinho bom classificado como ruim), respectivamente essas métricas são a _precision_ e a _recall_. Sendo assim, seria mais interessante usar a média harmônica entre elas que é definida pela _f1-score_, ou seja, um valor alto de _f1-score_ só ocorrerá se a _recall_ e _precision_ forem altas. Além disso, a _f1-score_ também é uma boa métrica para trabalhar com classes desbalanceadas, que é o caso deste problema, onde temos aproximadamente 66,51% de vinhos classificados como bons e 33,49% classificados como ruins.\n",
     "\n"
    ]
   }
